apps/lldap/k8s.lldap-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    lldap: https://github.com/lldap/lldap
    k8s: https://github.com/Evantage-WS/lldap-kubernetes
  labels:
    app.kubernetes.io/name: lldap
  name: lldap
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: lldap
  revisionHistoryLimit: 2
  strategy:
    type: RollingUpdate
  template:
    metadata:
      annotations:
        lldap: https://github.com/lldap/lldap
        k8s: https://github.com/Evantage-WS/lldap-kubernetes
      labels:
        app.kubernetes.io/name: lldap
    spec:
      containers:
        - env:
            - name: GID
              value: "1001"
            - name: LLDAP_JWT_SECRET
              valueFrom:
                secretKeyRef:
                  name: lldap-credentials
                  key: lldap-jwt-secret
            - name: LLDAP_LDAP_BASE_DN
              valueFrom:
                secretKeyRef:
                  name: lldap-credentials
                  key: base-dn
            - name: LLDAP_LDAP_USER_PASS
              valueFrom:
                secretKeyRef:
                  name: lldap-credentials
                  key: lldap-ldap-user-pass
            - name: LLDAP_KEY_SEED
              valueFrom:
                secretKeyRef:
                  name: lldap-credentials
                  key: lldap-ldap-key-seed
            - name: LLDAP_DATABASE_URL
              valueFrom:
                secretKeyRef:
                  name: lldap-credentials
                  key: lldap-database-credentials
            - name: TZ
              value: Europe/Berlin
            - name: UID
              value: "1001"
            - name: GID
              value: "1001"
            - name: LLDAP_IGNORED_USER_ATTRIBUTES
              value: '[ "sAMAccountName" ]'
            # LDAPS Configuration
            - name: LLDAP_LDAPS_OPTIONS__ENABLED
              value: "true"
            - name: LLDAP_LDAPS_OPTIONS__CERT_FILE
              value: /certs/tls.crt
            - name: LLDAP_LDAPS_OPTIONS__KEY_FILE
              value: /certs/tls.key
          # https://github.com/lldap/lldap/pkgs/container/lldap
          image: ghcr.io/lldap/lldap:latest-alpine@sha256:bb6e509b4a44e8e9985acfd95d83a85e252ed81879254d9751b9926e3ac26c62
          name: lldap
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
          ports:
            # LDAP
            - containerPort: 3890
            # LDAPS
            - containerPort: 6360
            # Web frontend
            - containerPort: 17170
          volumeMounts:
            - mountPath: /certs
              name: lldap-tls
              readOnly: true
          #  - mountPath: /data
          #    name: lldap-data
      restartPolicy: Always
      # Set fsGroup so that the lldap user (1001) can read the TLS certificates
      securityContext:
        fsGroup: 1001
      volumes:
        - name: lldap-tls
          secret:
            secretName: lldap-tls
            defaultMode: 0440
      #  - name: lldap-data
      #    persistentVolumeClaim:
      #      claimName: lldap-data
