apps/lldap/k8s.lldap-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    lldap: https://github.com/lldap/lldap
    k8s: https://github.com/Evantage-WS/lldap-kubernetes
  labels:
    app.kubernetes.io/name: lldap
  name: lldap
spec:
  ports:
    - name: ldap
      port: 3890
      targetPort: 3890
    - name: ldaps
      port: 6360
      targetPort: 6360
    - name: http
      port: 17170
      targetPort: 17170
  selector:
    app.kubernetes.io/name: lldap
